# heart-track

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  audio_processing.py  plots_processing.py  routes.py  spo2_estimation.py  video_processing.py
backend/app/templates/: base.html  header.html  index.html
frontend/: jest.config.js  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/layout/: main-content.tsx  sidebar.tsx
frontend/src/components/list/: file-list.tsx  video-card-component.tsx
frontend/src/components/upload/: results-table.tsx  upload-form.tsx
heart-track-app/: README.md  app.json  package-lock.json  package.json
heart-track-app/app/(tabs)/: _layout.tsx  explore.tsx  index.tsx
heart-track-app/components/: CameraViewContainer.tsx
