[project]
name = "heart-track-backend"
version = "0.1"
description = "Web application for Heart Track mobile app"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "flask-cors>=5.0.0",
    "flask>=3.0.3",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.9.2",
    "moviepy>=1.0.3",
    "opencv-python>=4.10.0.84",
    "scipy>=1.14.1",
]
